Prevent active label wrapping to next line

--- a/app/assets/stylesheets/quizzes.scss
+++ b/app/assets/stylesheets/quizzes.scss
@@ -59,6 +59,7 @@
 
 .active-label {
   padding: 0 0.5rem;
+  flex-wrap: nowrap;
 }
 
 .actions-container {
